syntax = "proto3";

package movie;


message GetTicketDetailsRequest{
    map<string,int32> ticketPrice = 2;
}

message GetTicketDetailsResponse{
    map<string,int32> ticketPrice = 2;
}


service MovieService {
    rpc GetTicketDetails(GetTicketDetailsRequest) returns (GetTicketDetailsResponse) {};
}