syntax = "proto3";

package user;


message User{

    int32 id = 1;
    string name = 2;
}

message GetUserDetailsRequest{
    int32 id = 1;
}
message GetUserDetailsResponse {
    User user = 1;
}
service UserService{

    rpc GetUserDetails(GetUserDetailsRequest) returns (GetUserDetailsResponse);

}